deployment-kubernetes/base/ci-cd-jenkins-namespace.yaml
# ============================================
# Shopease: shopease-webapp ci-cd jenkins agents namespace
# Author: Sanket Mule
# ============================================

apiVersion: v1
kind: Namespace
metadata:
  name: jenkins-cicd-agents
  labels:
    env: development
