deployment-kubernetes/base/Ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: shopease-webapp-ingress
  namespace: shopease-webapp-development
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /api/auth
        pathType: ImplementationSpecific
        backend:
          service:
            name: auth-service
            port:
              number: 8080
      - path: /api/products
        pathType: ImplementationSpecific
        backend:
          service:
            name: product-service
            port:
              number: 8081
      - path: /api/cart
        pathType: ImplementationSpecific
        backend:
          service:
            name: cart-service
            port:
              number: 8082
      - path: /api/orders
      - pathType: Prefix
        backend:
          service:
            name: order-service
            port:
              number: 8083
